syntax = "proto3";
package nas;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "types.proto";

service FileService {
  rpc GetFile (GetFileRequest) returns (FileResponse);
  rpc SearchFiles (SearchFilesRequest) returns (FileListResponse);
  rpc GetDeletedFiles (GetDeletedFilesCommand) returns (FileListResponse);
  rpc InitFile (InitFileRequest) returns (FileResponse);
  rpc UploadContent (stream FileChunk) returns (google.protobuf.Empty);
  rpc RenameFile (RenameFileRequest) returns (FileResponse);
  rpc UndeleteFile (UndeleteFileRequest) returns (FileResponse);
  rpc DeleteChosenFiles (DeleteChosenFilesRequest) returns (google.protobuf.Empty);
  rpc DeleteFile (DeleteFileRequest) returns (google.protobuf.Empty);
  rpc MoveFile (MoveFileRequest) returns (FileResponse);
  rpc CopyFile (CopyFileRequest) returns (FileResponse);
  rpc UpdateFileContent (stream FileChunk) returns (google.protobuf.Empty);
  rpc ArchiveFile (ArchiveFileCommand) returns (google.protobuf.Empty);
  rpc UnarchiveFile (UnarchiveFileCommand) returns (google.protobuf.Empty);
  rpc RemoveAllDeletedFiles (RemoveAllDeletedFilesCommand) returns (google.protobuf.Empty);
}

enum FileType {
  UNKNOWN = 0;
  TEXT = 1;
  IMAGE = 2;
  VIDEO = 3;
  AUDIO = 4;
  PDF = 5;
}

enum UploadStatus {
  PENDING = 0;
  COMPLETED = 1;
  FAILED = 2;
}

message FileResponse {
  EntityId id = 1;
  string name = 2;
  EntityId owner_id = 3;
  EntityId parent_folder_id = 4;
  FileType file_type = 5;
  bool is_deleted = 6;
  google.protobuf.Timestamp ttl = 7;
  int64 size = 8;
  UploadStatus upload_status = 9;
}

message FileListResponse {
  repeated FileResponse files = 1;
}

message GetFileRequest {
  EntityId id = 1;
}

message SearchFilesRequest {
  string file_name = 1;
}

message InitFileRequest {
  string name = 1;
  EntityId destination = 2;
  EntityId owner_id = 3;
  int64 size = 4;
  bool is_global = 5;
}

message FileChunk {
  oneof data {
    EntityId file_id = 1;
    bytes content = 2;
  }
}

message RenameFileRequest {
  EntityId id = 1;
  string new_name = 2;
}

message UndeleteFileRequest {
  EntityId id = 1;
}

message DeleteChosenFilesRequest {
  repeated EntityId file_ids = 1;
}

message DeleteFileRequest {
  EntityId id = 1;
}

message MoveFileRequest {
  EntityId folder_id = 1;
  EntityId file_id = 2;
}

message CopyFileRequest {
  EntityId file_id = 1;
  EntityId target_folder_id = 2;
  EntityId user_id = 3;
}

message ArchiveFileCommand {
  EntityId file_id = 1;
}

message UnarchiveFileCommand {
  EntityId file_id = 1;
}

message RemoveAllDeletedFilesCommand {
  EntityId user_id = 1;
}

message GetDeletedFilesCommand {
  EntityId user_id = 1;
}